# keybuf

./: .gitignore  AUTHORS  COPYING  Makefile.am  README  TODO  configure.ac  e-module-keybuf.edc  module.desktop.in
data/themes/: Makefile.am  keybuf.edc
po/: Makevars  keybuf.pot
src/: Makefile.am  e_mod_main.c  e_mod_main.h  keybuf.c  keybuf_util.c  keybuf_util.h
